--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1023,13 +1023,6 @@
     position: relative;
     top: -10px;
 }
-.login__form {
+/* .registration {
 
-}
-.
-.registration {
-
-}
-.header__navbar-login :hover .login__form {
-
-}
+} */
