create file product detail

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1031,3 +1031,8 @@
     text-decoration: none;
     color: var(--primary-color);
 }
+.product__container {
+    background-color: #6666;
+    width: 100%;
+    height: 1000px;
+}
