--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -42,6 +42,11 @@ html {
     padding-right: 5px;
     width: 20%;
 }
+.grid__column-5 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 50%;
+}
 .grid__column-10 {
     padding-left: 5px;
     padding-right: 5px;
