--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -857,6 +857,7 @@
     font-size: 1.4rem;
     color: #555;
 }
+
 .home-product-item {
     position: relative;
     margin-top: 10px;
@@ -1035,4 +1036,39 @@
     background-color: #6666;
     width: 100%;
     height: 1000px;
+}
+.product__price {
+    display: block;
+    font-size: 50px;
+    padding: 16px ;
+    margin-top: 12px;
+    margin-left: 100px;
+    border-bottom: 2px solid #000;
+}
+.product__item {
+    position: relative;
+    display: flex;
+    margin-top: 14px;
+}
+.product__img {
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.product__cover {
+    height: 850px;
+    background-color: #d6d5d5;
+}
+.img-zoom-lens {
+    position: absolute;
+    /*set the size of the lens:*/
+    width: 40px;
+    height: 40px;
+  }
+.img-zoom-result {
+    border: 1px solid #d4d4d4;
+  /*set the size of the result div:*/
+  width: 400px;
+  height: 400px;
 }
