--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,7 +7,8 @@
     --star-gold-color: yellow;
     --navbar-height: 34px;
     --header-height: 120px;
-    --header-with-search-height: calc(var(--header-height)- var(--navbars-height))
+    --header-with-search-height: calc(var(--header-height)- var(--navbars-height));
+    --header-sort-bar-height: 46px;
 }
 *{
     box-sizing: inherit;
