--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,6 +7,27 @@
     .hide-on-mobile-tablet {
         display: none;
     }
+    .header {
+        position: fixed;
+        z-index: 5;
+        top: 0;
+        width: 100%;
+    }
+    .app__container {
+        margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
+    }
+    .header__cart-list {
+        /* position: fixed; */
+        top: calc(100% + 22px);
+        right: 0;
+        width: 50vh;
+    }
+    .header__cart-list::after {
+        display: none;
+    }
+    .header__sort-bar {
+        display: flex;
+    }
 
 }
 /* tablet */
@@ -15,13 +36,30 @@
         display: none;
     }
     .header__cart {
-        width: 80px;
-        text-align: center;
+        width: 70px;
+        text-align: right;
+        padding-top: 12px;
+    }
+    .header__cart-list {
+        padding: 0 calc((100% -644px)/2);
+
     }
 }
 /*  mobile */
 @media (max-width: 739px) {
     .hide-on-mobile {
         display: none;
+    }
+    .header__cart-list {
+        position: fixed;
+        top: var(--header-height);
+        right: 0;
+        width: 100%;
+    }
+    .header-with-search {
+        justify-content: space-between;
+    }
+    .header__logo, .header__cart {
+        width: unset;
     }
 }
