--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -33,7 +33,7 @@ html {
     margin-left: -5px;
     margin-right: -5px;}
 /* TEST */
-.grid__column-2 {
+/* .grid__column-2 {
     padding-left: 5px;
     padding-right: 5px;
     width: 16.6667%;
@@ -42,7 +42,7 @@ html {
     padding-left: 5px;
     padding-right: 5px;
     width: 20%;
-}
+} */
 .grid__column-5 {
     padding-left: 5px;
     padding-right: 5px;
@@ -73,7 +73,8 @@ html {
 /* modal */
 .modal {
     position: fixed;
-    display: flex;
+    /* display: flex; */
+    display: none;
     right: 0;
     left: 0;
     top: 0;
