--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -62,4 +62,42 @@
     .header__logo, .header__cart {
         width: unset;
     }
+    .mobile__search-checkbox:checked ~ .header__search {
+        display: flex;
+    }
+    .header__search {
+        position: fixed;
+        left: 0;
+        z-index: 1;
+        top: calc(var(--header-height) - 8px);
+        right: 0;
+        height: 46px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.7);
+        animation: mobilesearchsidein linear 0.3s;
+        display: none;
+    }
+    .app__content {
+        padding: 0 4px;
+    }
+    .header__search-select {
+        display: none;
+    }
+    .header__search-history {
+        width: 100%;
+        position: fixed;
+        top: calc(var(--header-height) + var(--header-sort-bar-height));
+    }
+    @keyframes mobilesearchsidein {
+        from {
+            opacity: 0;
+        top: calc(var(--header-height) / 2);
+            
+        }
+        to {
+            opacity: 1;
+            top: calc(var(--header-height) - 7px);
+
+        }
+        
+    }
 }
