test function popup login form

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -71,9 +71,9 @@ html {
     }
 }
 /* modal */
-.modal {
+#modal {
     position: fixed;
-    /* display: flex; */
+    
     display: none;
     right: 0;
     left: 0;
